--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -157,6 +157,11 @@ $global-radius: 8px;
 // d. Media Query Ranges
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
+$small-breakpoint:  640px;
+$medium-breakpoint: 1024px;
+$large-breakpoint:  1440px;
+$xlarge-breakpoint: 1920px;
+
 // $small-breakpoint:  em-calc(640);
 // $medium-breakpoint: em-calc(1024);
 // $large-breakpoint:  em-calc(1440);
