--- a/scss/app-new.scss
+++ b/scss/app-new.scss
@@ -78,11 +78,12 @@ div.portfolio-wrapper {
       }
     }
 
-    @media screen and (max-width: 768px) {
+    // @media screen and (max-width: $medium-breakpoint) {
+    @media screen and (max-width: $medium-breakpoint) {
       width: 50%;
     }
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: $small-breakpoint) {
       width: 100%;
     }
   }
@@ -113,11 +114,11 @@ footer {
       font-style: italic;
       font-size: 1em;
     }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: $medium-breakpoint) {
       width: 74%;
     }
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: $small-breakpoint) {
       width: 100%;
     }
 
