--- a/scss/app-new.scss
+++ b/scss/app-new.scss
@@ -104,24 +104,39 @@ footer {
   height: 2.5em;
   border-top: 1px solid $bg-secondary-color;
   ul {
-    width:50%;
+    text-align: center;
+    width:13%;
+    @media screen and (max-width: $medium-breakpoint) {
+      width: 58%;
+    }
+
+    @media screen and (max-width: $small-breakpoint) {
+        width: 58%;
+    }
     margin:0 auto;
     padding:0.5em;
     li {
-      text-align: center;
-      width: 31%;
+      &:first-child {
+          text-align: left;
+      }
+      &:nth-child(2) {
+          text-align: right;
+      }
+      width: 49%;
       float:left;
       font-style: italic;
       font-size: 1em;
     }
-    @media screen and (max-width: $medium-breakpoint) {
-      width: 74%;
-    }
 
-    @media screen and (max-width: $small-breakpoint) {
+  }
+
+  .copyright {
+      display: block;
       width: 100%;
-    }
-
+      text-align: center;
+      clear: both;
+      margin-top: 4em;
+      font-size: 0.7em;
   }
 
 
