--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -128,6 +128,7 @@ $nav-bar-color: #3C60B3;
 $overlay-color: #FCE437;
 $bg-primary-color: #ececec;
 $bg-secondary-color: #cdcdcd;
+$dark-color: #000;
 
 // We use these to control various global styles
 // $body-bg: $white;
