--- a/scss/app-new.scss
+++ b/scss/app-new.scss
@@ -1,143 +1,302 @@
 @import "reset";
 @import "settings";
+@import "lightbox";
 
 /*generics*/
 body {
-  font-family: Didot, 'Didot LT STD', 'Hoefler Text', Garamond, 'Times New Roman', serif;
-  line-height: normal;
+    font-family: Didot, 'Didot LT STD', 'Hoefler Text', Garamond, 'Times New Roman', serif;
+    line-height: normal;
 }
+
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 /* header */
 .header {
-  width:100%;
-  background-color: $bg-primary-color;
-  height: 2.5em;
-  border-bottom: 1px solid $bg-secondary-color;
+    width: 100%;
+    background-color: $bg-primary-color;
+    height: 2.5em;
+    border-bottom: 1px solid $bg-secondary-color;
 
-  .logo {
-      display:inline;
-      img {
-        padding-top:7px;
-        padding-left:20px;
-      }
-  }
+    .logo {
+        display: inline;
 
-  nav {
-    float:right;
-    height:100%;
-    .tags li {
-      font-style: italic;
-      color: $primary-color;
-      border-left:1px solid $bg-secondary-color;
-      float: left;
-      height: 1.26em;
-      padding: 10px;
-      overflow:hidden;
-      &:hover {
-        background-color: #fff;
-        border-left:1px solid $bg-secondary-color;
-      }
+        img {
+            padding-top: 7px;
+            padding-left: 20px;
+        }
     }
-  }
+
+    nav {
+        float: right;
+        height: 100%;
+
+        .tags li {
+            font-style: italic;
+            color: $primary-color;
+            border-left: 1px solid $bg-secondary-color;
+            float: left;
+            height: 1.26em;
+            padding: 10px;
+            overflow: hidden;
+
+            &:hover {
+                background-color: #fff;
+                border-left: 1px solid $bg-secondary-color;
+            }
+        }
+    }
 }
 
-div.portfolio-wrapper {
-  max-width: 1000px;
-  margin:0 auto;
-  margin-top:41px;
+.container {
+    // position: absolute;
+    // width: 90%;
+    // // height: 50px;
+    // top: 50%;
+    // left: 50%;
+    // margin-left: -45%; /* margin is -0.5 * dimension
+    // margin-top: -25%;
+}
 
-
-  div.portfolio-item {
-    // background-color: $bg-primary-color;
-    float:left;
-    width:32.5%;
-    margin-bottom:41px;
-    text-align: center;
-    height:300px;
-    // border:1px solid black;
-
-
-    .title {
-      color: $primary-color;
-    }
-
-    .abstract {
-      width: 12em;
-      margin: 10px auto;
-    }
-
-    .round {
-      img {
-        width:200px;
-        height:200px;
-        border-radius: 50%;
-        border: 2px solid $bg-primary-color;
-      }
-    }
-
-    // @media screen and (max-width: $medium-breakpoint) {
-    @media screen and (max-width: $medium-breakpoint) {
-      width: 50%;
-    }
+ul.portfolio-wrapper {
+    max-width: 1000px;
+    margin: 0 auto;
+    margin-top: 41px;
+    margin-left: 17rem;
 
     @media screen and (max-width: $small-breakpoint) {
-      width: 100%;
+        max-width: none;
+        margin-left: 1rem;
     }
-  }
+
+    li.polaroid {
+        width: 19.5%;
+
+        @media screen and (max-width: $small-breakpoint) {
+            width: 46.5%;
+        }
+
+        background-color: white;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        margin-bottom: 25px;
+        float: left;
+        margin-bottom: 1rem;
+
+        &:not(:nth-child(4n)) {
+            margin-right: 1rem;
+        }
+
+        @media screen and (max-width: $small-breakpoint) {
+            &:not(:nth-child(4n)) {
+                margin-right: 0;
+            }
+            &:not(:nth-child(2n)) {
+                margin-right: 1rem;
+            }
+        }
+
+        img {
+            height: 12rem;
+        }
+    }
+
+    div.container {
+        text-align: center;
+        padding: 10px 20px;
+
+        h2 {
+            display: inline;
+            font-size: 0.8rem;
+        }
+
+        .tooltip {
+            float: right;
+            font-size: 1.2rem;
+            display: inline-block;
+            position: relative;
+
+            i {
+                color: $primary-color;
+            }
+
+            .tooltiptext {
+                visibility: hidden;
+
+                // visibility: visible;
+                width: 120px;
+                background-color: $bg-primary-color;
+                color: $logo-color;
+                text-align: center;
+                border-radius: 6px;
+                padding: 5px 0;
+                position: absolute;
+                z-index: 1;
+                bottom: -430%;
+
+                // bottom: 125%;
+                left: 50%;
+				margin-left: -60px;
+				
+				@media screen and (max-width: $small-breakpoint) {
+					margin-left: -100px;
+				}
+
+                // opacity: 1;
+                opacity: 0;
+                transition: opacity 0.3s;
+                text-align: center;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+                // Triangulillo
+                &::after {
+                    content: "";
+                    position: absolute;
+                    top: -9%;
+					left: 50%;
+					@media screen and (max-width: $small-breakpoint) {
+						left: 83%;
+					}
+                    margin-left: -5px;
+                    border-width: 5px;
+                    border-style: solid;
+                    border-color: transparent transparent $bg-secondary-color transparent;
+                }
+
+                i {
+                    color: $primary-color;
+                }
+
+                p {
+                    font-size: 0.9rem;
+                    padding: 0.2rem;
+                    color: $dark-color;
+                }
+
+                ul {
+                    margin: 0;
+                    padding: 0;
+                    display: inline-block;
+
+                    // width: 100%;
+                    text-align: center;
+                    position: relative;
+                    top: 0.2rem;
+
+                    li {
+                        float: left;
+
+                        &:not(:last-child) {
+                            margin-right: 1rem;
+                        }
+                    }
+                }
+            }
+
+            &:hover {
+                .tooltiptext {
+                    visibility: visible;
+                    opacity: 1;
+                }
+            }
+        }
+    }
+
+    div.portfolio-item {
+        background-color: $bg-primary-color;
+        float: left;
+        width: 19.5%;
+        margin-bottom: 1rem;
+        margin-right: 1rem;
+        text-align: center;
+        height: 300px;
+        border: 1px solid black;
+        padding: 1rem;
+
+        .title {
+            color: $primary-color;
+        }
+
+        .abstract {
+            width: 12em;
+            margin: 10px auto;
+        }
+
+        .round {
+            img {
+                width: 200px;
+                height: 200px;
+
+                // border-radius: 50%;
+
+                border: 2px solid $bg-primary-color;
+            }
+        }
+
+        // @media screen and (max-width: $medium-breakpoint) {
+        @media screen and (max-width: $medium-breakpoint) {
+            width: 50%;
+        }
+
+        @media screen and (max-width: $small-breakpoint) {
+            width: 100%;
+        }
+    }
 }
 
 section.about {
-  width:50%;
-  margin:0 auto;
-  clear:both;
-  text-align: center;
-  padding-top: 100px;
-  padding-bottom: 100px;
-  border-top:2px solid $bg-primary-color;
+    width: 50%;
+    margin: 0 auto;
+    clear: both;
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    border-top: 2px solid $bg-primary-color;
+    color: $primary-color;
 }
 
 footer {
-  background-color: $bg-primary-color;
-  height: 2.5em;
-  border-top: 1px solid $bg-secondary-color;
-  ul {
-    text-align: center;
-    width:13%;
-    @media screen and (max-width: $medium-breakpoint) {
-      width: 58%;
+    background-color: $bg-primary-color;
+    height: 2.5em;
+    border-top: 1px solid $bg-secondary-color;
+
+    ul {
+        text-align: center;
+        width: 13%;
+
+        @media screen and (max-width: $medium-breakpoint) {
+            width: 58%;
+        }
+
+        @media screen and (max-width: $small-breakpoint) {
+            width: 58%;
+        }
+
+        margin: 0 auto;
+        padding: 0.5em;
+
+        li {
+            &:first-child {
+                text-align: left;
+            }
+
+            &:nth-child(2) {
+                text-align: right;
+            }
+
+            width: 49%;
+            float: left;
+            font-style: italic;
+            font-size: 1em;
+        }
     }
 
-    @media screen and (max-width: $small-breakpoint) {
-        width: 58%;
+    .copyright {
+        display: block;
+        width: 100%;
+        text-align: center;
+        clear: both;
+        margin-top: 4em;
+        font-size: 0.7em;
     }
-    margin:0 auto;
-    padding:0.5em;
-    li {
-      &:first-child {
-          text-align: left;
-      }
-      &:nth-child(2) {
-          text-align: right;
-      }
-      width: 49%;
-      float:left;
-      font-style: italic;
-      font-size: 1em;
-    }
-
-  }
-
-  .copyright {
-      display: block;
-      width: 100%;
-      text-align: center;
-      clear: both;
-      margin-top: 4em;
-      font-size: 0.7em;
-  }
-
-
 }
